# cpp_usbdescriptor

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: usbdescriptor.h
